# docs/swagger.yaml
@@ -17,14 +17,14 @@ definitions:
     properties:
       classId:
         type: string
-      date:
+      className:
         type: string
-      name:
+      date:
         type: string
     required:
     - classId
+    - className
     - date
-    - name
     type: object
   models.Class:
     properties:
@@ -82,7 +82,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: A list of bookings
+          description: List of bookings
           schema:
             allOf:
             - $ref: '#/definitions/responses.Response'
@@ -92,10 +92,6 @@ paths:
                     $ref: '#/definitions/models.Booking'
                   type: array
               type: object
-        "500":
-          description: Server error
-          schema:
-            $ref: '#/definitions/responses.Response'
       summary: Get all bookings
       tags:
       - bookings
@@ -104,7 +100,7 @@ paths:
       - application/json
       description: Creates a new booking for a member to attend a class
       parameters:
-      - description: Booking data
+      - description: Booking information
         in: body
         name: booking
         required: true
@@ -123,11 +119,7 @@ paths:
                   $ref: '#/definitions/models.Booking'
               type: object
         "400":
-          description: Invalid input or no class available for the date
-          schema:
-            $ref: '#/definitions/responses.Response'
-        "500":
-          description: Server error
+          description: Invalid input
           schema:
             $ref: '#/definitions/responses.Response'
       summary: Create a new booking
@@ -146,7 +138,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: Booking details
+          description: Booking found
           schema:
             allOf:
             - $ref: '#/definitions/responses.Response'
@@ -158,18 +150,14 @@ paths:
           description: Booking not found
           schema:
             $ref: '#/definitions/responses.Response'
-        "500":
-          description: Server error
-          schema:
-            $ref: '#/definitions/responses.Response'
-      summary: Get a booking by ID
+      summary: Get booking by ID
       tags:
       - bookings
   /classes:
     get:
-      description: Retrieves a list of all classes
+      description: Retrieves a list of all classes, optionally filtered by date
       parameters:
-      - description: Optional date to filter classes (YYYY-MM-DD)
+      - description: Filter classes by date (YYYY-MM-DD)
         in: query
         name: date
         type: string
@@ -177,7 +165,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: A list of classes
+          description: List of classes
           schema:
             allOf:
             - $ref: '#/definitions/responses.Response'
@@ -191,19 +179,15 @@ paths:
           description: Invalid date format
           schema:
             $ref: '#/definitions/responses.Response'
-        "500":
-          description: Server error
-          schema:
-            $ref: '#/definitions/responses.Response'
       summary: Get all classes
       tags:
       - classes
     post:
       consumes:
       - application/json
-      description: Creates a new class with the provided details
+      description: Creates a new fitness class with the provided details
       parameters:
-      - description: Class data
+      - description: Class information
         in: body
         name: class
         required: true
@@ -245,7 +229,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: Class details
+          description: Class found
           schema:
             allOf:
             - $ref: '#/definitions/responses.Response'
@@ -257,11 +241,7 @@ paths:
           description: Class not found
           schema:
             $ref: '#/definitions/responses.Response'
-        "500":
-          description: Server error
-          schema:
-            $ref: '#/definitions/responses.Response'
-      summary: Get a class by ID
+      summary: Get class by ID
       tags:
       - classes
 swagger: "2.0"
